# lmc

./: Cargo.toml  README.md  memory.x
.cargo/: config
scripts/: deploy  run-openocd
src/: board.rs  dac_mcp4922.rs  debounce_input.rs  display.rs  input.rs  lcm.rs  lm.rs  main.rs  panic_abort.rs
