[package]
name = "laser-module-controller"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
#stm32f407g-disc = "0.1.2"
stm32f407g-disc = { path = "./stm32f407g-disc" }
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"
ssd1306 = { path = "./ssd1306" }
#embedded-graphics = "0.4.7"
embedded-graphics = { path = "./embedded-graphics/embedded-graphics" }

#[patch.crates-io]
#embedded-graphics = { path = "./embedded-graphics/embedded-graphics" }

[dependencies.cortex-m]
version = "0.5.8"
features = ["const-fn"]

[dependencies.cortex-m-rt]
version = "0.6.7"
features = ["device"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
