[package]
name = "lmc"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"
heapless = "0.4.2"
#ssd1306 = { path = "./ssd1306" }
#embedded-graphics = "0.4.7"
pwm-pca9685 = "0.1.0"

[dependencies.cortex-m]
version = "0.5.8"
features = ["const-fn"]

[dependencies.cortex-m-rt]
version = "0.6.7"
features = ["device"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32f1xx-hal]
version = "0.2.1"
features = ["stm32f103", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
